syntax = "proto3";
package ncs.user.title;
option go_package = "grpc";

import "google/api/annotations.proto";

message Info {
    int64 uid = 1;
    string custom_title = 2;
    int32 title_type = 3;
}

message GetTitleReq {
    int64 uid = 1;
}

message GetTitleResp {
    Info info = 1;
}

message SetTitleReq {
    Info info = 1;
}

message SetTitleResp {
}

service Title {
    rpc GetTitle (GetTitleReq) returns (GetTitleResp) {
        option (google.api.http) = {
            get: "/user/title/{uid}"
        };
    }
    rpc SetTitle (SetTitleReq) returns (SetTitleResp) {
        option (google.api.http) = {
            put: "/user/title/{info.uid}"
            body: "*"
        };
    }
}